# Biosignal-Device-Interface

./: .buildinfo  .gitignore  README.html  README.md  api_documentation.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.github/workflows/: sphinx.yml
_downloads/0a16ac66e8776934b61efe1442529f50/: 2_integrating_multiple_devices.ipynb
_downloads/185f481a21dae298a238ed6f7fc56bf7/: 1_integrating_a_device.ipynb
_downloads/3a51b005e49df49355bdbacf042c2c80/: 4_implementing_new_device.py
_downloads/7f0822ed078c3986ff3d9c7ad4c5b23c/: 1_integrating_a_device.py
_downloads/ae60512a78b6b2a0b6be8248a230a9d7/: 4_implementing_new_device.ipynb
_downloads/dba4a6359d3a7c959710f2679c6c1daa/: 3_integrating_device_interface_and_biosignal_plot.ipynb
_downloads/f2bbbf9a7782b2401cc5429c89a2ed00/: 3_integrating_device_interface_and_biosignal_plot.py
_modules/: index.html
_sources/: README.md.txt  index.rst.txt
_sources/auto_examples/: 1_integrating_a_device.rst.txt  2_integrating_multiple_devices.rst.txt  3_integrating_device_interface_and_biosignal_plot.rst.txt  4_implementing_new_device.rst.txt  index.rst.txt
_sources/modules/device_widgets/: all_devices_widget.rst.txt  device_widgets.rst.txt
_static/: documentation_options.js
auto_examples/: 1_integrating_a_device.html  2_integrating_multiple_devices.html  3_integrating_device_interface_and_biosignal_plot.html  4_implementing_new_device.html  index.html  sg_execution_times.html
biosignal_device_interface/: __init__.py
biosignal_device_interface/constants/: __init__.py  base_device_constants.py
biosignal_device_interface/constants/devices/: base_device_constants.py  muovi_constants.py  otb_muovi_constants.py  quattrocento_constants.py
biosignal_device_interface/devices/: __init__.py  mindrove.py  muovi.py  otb_muovi.py  quattrocento.py  rhd_recording_controller.py  sessantaquattro.py  syncstation.py
biosignal_device_interface/devices/core/: __init__.py  base_device.py
biosignal_device_interface/devices/otb/: __init__.py  otb_muovi.py  otb_quattrocento.py  otb_quattrocento_light.py  (+2 more)
docs/source/: README.md  api_documentation.rst  conf.py  index.rst  sg_execution_times.rst
examples/: 1_integrating_a_device.py  2_integrating_multiple_devices.py  3_integrating_device_interface_and_biosignal_plot.py  4_implementing_new_device.py  __init__.py
modules/device_widgets/: all_devices_widget.html  device_widgets.html
tests/: test_imports.py
(+128 files in other folders)
