[tool.poetry]
name = "biosignal-device-interface"
version = "0.0.1"
description = "Python communication interface to many biosignal devices manufactured by several companies to easy integration in custom PySide6 applications."
authors = ["Dominik I. Braun <dome.braun@fau.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyside6 = "^6.7.0"
numpy = "^1.26.4"
psutil = "^5.9.8"
mindrove = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
