[project]
name = "biosignal-device-interface"
version = "0.2.4"
description = "Python communication interface to many biosignal devices manufactured by several companies to easy integration in custom PySide6 applications."
authors = [
    {name = "Dominik I. Braun", email = "dome.braun@fau.de"},
    {name = "Raul C. Sîmpetru", email = "raul.simpetru@fau.de"},
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyside6>=6.7.0",
    "numpy>=1.26.4",
    "psutil>=5.9.8",
    "aenum>=3.1.15",
    "vispy>=0.14.3",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "tornado>=6.4.2",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
docs = [
    "sphinx>=7.4.6",
    "rinohtype>=0.5.5",
    "furo>=2024.7.18",
    "sphinx-gallery>=0.16.0",
    "toml>=0.10.2",
    "memory-profiler>=0.61.0",
    "enum-tools[sphinx]>=0.12.0",
    "sphinx-autodoc-typehints>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
