[project]
name = "biosignal-device-interface"
version = "0.2.4"
description = "Python communication interface to many biosignal devices manufactured by several companies to easy integration in custom PySide6 applications."
authors = ["Dominik I. Braun <dome.braun@fau.de>", "Raul C. Sîmpetru <raul.simpetru@fau.de>"]
license = "GPL-3.0"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "aenum>=3.1.16",
    "numpy>=2.2.6",
    "psutil>=7.0.0",
    "pyside6>=6.9.2",
    "scipy>=1.15.3",
    "vispy>=0.15.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
]
docs = [
    "sphinx>=7.4.6",
    "rinohtype>=0.5.5",
    "furo>=2024.7.18",
    "sphinx-gallery>=0.16.0",
    "toml>=0.10.2",
    "memory-profiler>=0.61.0",
    "enum-tools[sphinx]>=0.12.0",
    "sphinx-autodoc-typehints>=2.2.3",
]
